# experiments

./: pyproject.toml  runexperiment.sh  setup.sh
experiment/: config_experiment.py  configuration.conf  datasets.csv  experiment_execution.py  experiment_utils.py  prueba.py  requirements.txt  run_experiment.py
experiment/config/: experiment_configuration.cfg
